loopfor.LoopFor.scala.error
Erreur de compilation :
LoopFor:12: error: reassignment to val
  nbPas=nbPas-1
       ^