loopfor.LoopFor.scala.code
var nbPas=0

while (!estSurBiscuit()){
  nbPas=nbPas+1
  avance()
}

prendBiscuit()

for (nbPas<-1 to 7){
  recule()
  nbPas=nbPas-1
}